<resources>
    <string name="app_name">RootLink</string>
    <string name="sign_logo">管理您的智能硬件</string>
    <string name="sign_username">用户名</string>
    <string name="sign_password">密码</string>
    <string name="sign_password_again">重复密码</string>
    <string name="register">注册账号</string>
    <string name="login">登陆</string>
    <string name="remember_password">记住密码</string>
    <string name="sign_via">请输入邮箱</string>
    <string name="sign_sure">发送验证码</string>
    <string name="rule">我同意</string>
    <string name="textrule">《服务条款》</string>
    <string name="surecode">请输入验证码</string>
    <string name="rulecontent">软件用户许可安装协议\n用户须知：在此特别提醒各位用户认真阅读、充分理解本《软件许可及安装协议》（下称《协议》）——用户应认真阅读充分理解本《协议》中各条款。您的安装、使用、获取和登录XXXapp等行为将视为对本《协议》的接受，并同意接受本《协议》各项条款的约束。\n       本《协议》是您（下称“用户”）与公司之间关于用户安装、使用软件，注册、使用、管理软件；以及使用公司公司提供的相关服务所订立的协议。本《协议》描述公司与用户之间关于“软件”许可使用及服务相关方面的权利义务。“用户”是指通过公司提供的获取软件授权和XXX注册的途径获得软件产品及号码授权许可以及使用公司公司提供的相关服务的个人或组织。\n      本《协议》可由公司随时更新，更新后的协议条款一旦公布即代替原来的协议条款，恕不再另行通知。用户可重新下载安装本软件或网站查阅最新版协议条款。在公司修改《协议》条款后，如果用户不接受修改后的条款，请立即停止使用公司提供的软件和服务，用户继续使用公司提供的软件和服务将被视为已接受了修改后的协议。\n除本《协议》有明确规定外，本《协议》并未对利用本“软件”使用的公司或合作单位的其他服务规定相关的服务条款。对于这些服务，一般有单独的服务条款加以规范，用户须在使用有关服务时另行了解与确认。单独的服务条款与本协议有冲突的地方，以单独的服务条款为准。如用户使用该服务，视为对相关服务条款的接受。\n       1.知识产权声明\n    本“软件”是由公司开发。“软件”的一切版权、商标权、专利权、商业秘密等知识产权，以及与“软件”相关的所有信息内容，包括但不限于：文字表述及其组合、图标、图饰、图表、色彩、界面设计、版面框架、有关数据、印刷材料、或电子文档等均受中华人民共和国著作权法、商标法、专利法、反不正当竞争法和相应的国际条约以及其他知识产权法律法规的保护，除涉及第三方授权的软件或技术外，公司享有上述知识产权。\n     2.软件授权范围  \n  2.1用户可以在个人计算机或者手机上安装、使用、显示、运行本软件。\n    2.2 保留权利：未明示授权的其他一切权利仍归公司所有，用户使用其他权利时须另外取得公司的书面同意。\n    2.3 除本《协议》有明确规定外，\n本《协议》并未对利用本软件访问的公司公司或合作单位的其他服务规定相关的服务条款，对于这些服务有可能有单独的服务条款加以规范，请用户在使用有关服务时另行了解与确认。      3. 关于软件使用\n    3.1用户可以通过预约功能体验公司提供的各种服务。包括在各大门店体验艾灸仪等各类专业养生仪器。 \n   3.2 用户可以通过在线购买方式获得本公司各类产品。在线支付支持各大银行网银和快捷支付，支付宝、微信等支付方式。     3.3用户可以通过在线申请方式加入XXX，成为XXX的会员。会员可享受优惠价格购买产品和免费门店体验服务。会员实行积分制度，每次消费满人民币一百元及以上即可享受一次积分，不满一百元的部分不计入积分。积分可以多次消费累积，上不封顶。积分可以在各大门店换取免费美容保养项目，积分当年有效，次年清零。会员实行一人卡号制度，会员服务仅限本人使用，不得转借他人。\n    3.4用户可以申请成为XXX的代理人，享受会员待遇。代理人须遵守本协议，实行自愿原则。 \n    4. 法律责任与免责\n    4.1 利用的许可  \n  4.2 公司特别提请用户注意：公司为了保障公司业务发展和调整的自主权，公司拥有随时自行修改或中断软件授权而不需通知用户的权利，如有必要，修改或中断会以通告形式公布于公司网站重要页面上。  \n  4.3 用户违反本《协议》或相关的服务条款的规定，导致或产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，用户同意赔偿公司与合作公司、关联公司，并使之免受损害。 \n   4.4 使用本“软件”由用户自己承担风险，公司及合作单位对本“软件”不作任何类型的担保，不论是明示的、默示的或法令的保证和条件，包括但不限于本“软件”的适销性、适用性、无病毒、无疏忽或无技术瑕疵问题、所有权和无侵权的明示或默示担保和条件，对在任何情况下因使用或不能使用本“软件”所产生的直接、间接、偶然、特殊及后续的损害及风险，公司及合作单位不承担任何责任。\n    4.5 使用本“软件”涉及到互联网服务，可能会受到各个环节不稳定因素的影响，存在因不可抗力、计算机病毒、黑客攻击、系统不稳定、非法内容信息、骚扰信息屏蔽以及其他任何网络、技术、通信线路、信息安全管理措施等原因造成的用户的经济损失，公司及合作单位不承担任何责任。\n    4.6 用户因第三方如电信部门的通讯线路故障、技术问题、网络、电脑故障、系统不稳定性及其他各种不可抗力原因而遭受的一切损失，公司及合作单位不承担责任。\n    4.7 因技术故障等不可抗事件影响到服务的正常运行的，公司及合作单位承诺在第一时间内与相关单位配合，及时处理进行修复，但用户因此而遭受的一切损失，公司及合作单位不承担责任。\n     5. 其他条款\n    5.1 本《协议》所定的任何条款的部分或全部无效者，不影响其它条款的效力。\n    5.2 本《协议》的解释、效力及纠纷的解决，适用于中华人民共和国法律。若用户和公司之间发生任何纠纷或争议，首先应友好协商解决，协商不成的，用户在此完全同意将纠纷或争议提交公司公司所在地即北京有管辖权的人民法院管辖。\n    5.3本《协议》版权由公司所有，公司保留一切解释权利。本文中提及的软件和服务名称有可能为公司的注册商标或商标，受法律保护。</string>
    <string name="home">主页</string>
    <string name="message">动态</string>
    <string name="file">文档</string>
    <string name="product">设备</string>

</resources>
