<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fefefe"
    tools:context="com.example.zpice.rootlink.LogIn"
    android:weightSum="1">

    <include layout="@layout/padding_20" />
    <include layout="@layout/padding_20" />
    <include layout="@layout/padding_20" />
    <include layout="@layout/padding_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/root" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_gravity="center"
            android:text="@string/sign_logo"/>
    </LinearLayout>

    <include layout="@layout/padding_20" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />


        <ImageView
            android:id="@+id/imageView_id"
            android:layout_width="0dp"
            android:layout_weight="0.3"

            android:layout_height="35dp"
            android:src="@drawable/sign_user" />

        <EditText
            android:id="@+id/id_et_login_username"
            android:layout_width="0dp"
            android:layout_weight="4"

            android:layout_height="40dp"
            android:hint="@string/sign_username"
            android:inputType="textEmailAddress"

            android:maxLength="10"
             />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <include layout="@layout/padding_20" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />


        <ImageView
            android:id="@+id/imageView_key"
            android:layout_width="0dp"
            android:layout_weight="0.3"

            android:layout_height="35dp"
            android:src="@drawable/sign_password" />

        <EditText
            android:id="@+id/id_et_login_password"
            android:layout_width="0dp"
            android:layout_weight="4"

            android:layout_height="40dp"
            android:hint="@string/sign_password"
            android:maxLength="12"
            android:inputType="textPassword"
             />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <include layout="@layout/padding_20" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent" />

        <CheckBox
            android:id="@+id/id_cb_login_rememberpassword"
            android:layout_width="0dp"
            android:layout_weight="3"

            android:text="@string/remember_password"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="0dp"
            android:layout_weight="2"

            android:layout_height="match_parent" />
        <TextView

            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/register"
            android:onClick="log_sign"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="0dp"
            android:layout_weight="2"


            android:layout_height="match_parent" />




    </LinearLayout>
    <Button
        android:id="@+id/btn_log"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:background="#55177cb0"
        android:text="@string/login"
        android:onClick="log"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textSize="20dp"/>

    <ProgressBar
        android:id="@+id/id_pb_login_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

</LinearLayout>
