<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fefefe"
    tools:context="com.example.zpice.rootlink.Sign"
    android:weightSum="1">

    <View
        android:layout_width="match_parent"
        android:layout_height="90dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/root" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_logo"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="70dp"
            android:layout_height="match_parent" />


        <ImageView
            android:id="@+id/imageView_id"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:src="@drawable/sign_user" />

        <EditText
            android:id="@+id/editTextIdSign_id"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/sign_username"
            android:inputType="textEmailAddress"

            android:maxLength="10"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="70dp"
            android:layout_height="match_parent" />


        <ImageView
            android:id="@+id/imageView_key"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:src="@drawable/sign_password" />

        <EditText
            android:id="@+id/editTextKeySign_id"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/sign_password"
            android:inputType="textEmailAddress"

            android:maxLength="12"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="70dp"
            android:layout_height="match_parent" />


        <ImageView
            android:id="@+id/imageView_keyagain"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:src="@drawable/sign_password_again" />

        <EditText
            android:id="@+id/id_editTextKeyAgain"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/sign_password_again"
            android:inputType="textEmailAddress"

            android:maxLength="12"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="70dp"
            android:layout_height="match_parent" />


        <ImageView
            android:id="@+id/imageView_mail"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:src="@drawable/sign_via" />

        <EditText
            android:id="@+id/id_editTextMail"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="邮箱"
            android:maxLength="18"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="53dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">


        <Button
            android:id="@+id/btn_signInSign"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_weight="0.08"
            android:background="#55177cb0"
            android:text="现在注册"
            android:onClick="signInSign"
            android:textSize="25dp" />

    </LinearLayout>

</LinearLayout>
